[tool.coverage.run]
source = ['xmr']
omit = []

[tool.ruff]
target-version = 'py39'
line-length = 80

[tool.ruff.lint]
exclude = [
    '.git',
    '__pycache__',
    'docs',
    'venv'
]

[tool.poetry]
name = "xmr"
version = "0.1.0"
description = ""
authors = ["exmuris <support@exmuris.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^5.3.0"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
anyio = "^4.6.2.post1"
coverage = {extras = ["toml"], version = "^7.6.4"}


[tool.poetry.group.dev.dependencies]
ipython = "^8.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
